Update requested changes