@@ -97,59 +97,6 @@
                 </plugins>
             </build>
         </profile>
-        <profile>
-            <id>profile_490</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m</argLine>
-                            <disableXmlReport>false</disableXmlReport>
-                            <parallel>false</parallel>
-                            <suiteXmlFiles>
-                                <suiteXmlFile>${basedir}/src/test/resources/testng.xml</suiteXmlFile>
-                            </suiteXmlFiles>
-                            <systemProperties>
-                                <property>
-                                    <!-- Common resource directory (eg: Key stores, certificates, etc.)-->
-                                    <name>common.resources.dir</name>
-                                    <value>
-                                        ${basedir}/../../resources/
-                                    </value>
-                                </property>
-                                <property>
-                                    <!-- testcase specific  resources directory-->
-                                    <name>test.resources.dir</name>
-                                    <value>
-                                        ${basedir}/src/test/resources/
-                                    </value>
-                                </property>
-                                <property>
-                                    <!-- Directory containing carbon applications -->
-                                    <name>test.resources.carbonApplications.dir</name>
-                                    <value>
-                                        ${basedir}/../../01-SynapseConfigProject/01-synapseConfigCompositeApplication_490/target/
-                                    </value>
-                                </property>
-                                <property>
-                                    <!-- Related carbon applications (comma separated) to deploy -->
-                                    <name>test.resources.carbonApplications.list</name>
-                                    <value>
-                                        01-synapseConfigCompositeApplication_490_1.0.0
-                                    </value>
-                                </property>
-                                <property>
-                                    <name>usedefaultlisteners</name>
-                                    <value>false</value>
-                                </property>
-                            </systemProperties>
-                            <workingDirectory>${basedir}/target</workingDirectory>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
     </profiles>
 
     <build>
